[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tonutils-adnlctl"
description = "Command-line tool for inspecting and monitoring tonutils ADNL clients."
requires-python = ">=3.10,<3.15"
authors = [
    { name = "nessshon" },
]
maintainers = [
    { name = "nessshon" },
]
dependencies = [
    "colorama~=0.4.6",
    "tonutils>=2.0.0b10",
]
keywords = [
    "AsyncIO",
    "TON",
    "TON blockchain",
    "The Open Network",
    "blockchain",
    "crypto",
    "smart contracts",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]
readme = "README.md"
license = "MIT"

[project.urls]
Homepage = "https://github.com/nessshon/tonutils-adnlctl/"
Repository = "https://github.com/nessshon/tonutils-adnlctl/"

[project.scripts]
tonutils-adnlctl = "tonutils_adnlctl.cli:main"

[tool.setuptools.packages.find]
include = ["tonutils_adnlctl", "tonutils_adnlctl.*"]

[tool.setuptools.package-data]
tonutils_adnlctl = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "tonutils_adnlctl.__meta__.__version__" }